--- a/app.json
+++ b/app.json
@@ -14,7 +14,9 @@
     "githubUrl": "https://github.com/SleeplessByte/expo-34rc0-example",
     "orientation": "portrait",
     "primaryColor": "#fff",
+    "icon": "./assets/icon.png",
     "splash": {
+      "image": "./assets/splash.template.png",
       "resizeMode": "contain",
       "backgroundColor": "#bbb"
     },
