--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-native": "^0.60.2",
     "eslint": "^6.1.0",
     "eslint-config-universe": "2.0.0-alpha.0",
+    "prettier": "^1.18.2",
     "typescript": "^3.5.3"
   },
   "private": true
