--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-gesture-handler": "~1.3.0",
     "react-native-paper": "^2.16.0",
     "react-native-screens": "1.0.0-alpha.22",
+    "react-native-web": "^0.11.5",
     "react-navigation": "^3.11.1"
   },
   "devDependencies": {
